objects/LLC_BI__LLC_LoanDocument__c.object
<CustomObject>
    <fields>
        <fullName>NDOC__Account__c</fullName>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-D Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Created_By_Closing_Checklist_Id__c</fullName>
        <description>This field is not required. It auto-populates if the placeholder was created from a closing checklist.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Created_By_Closing_Checklist_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__HasBeenWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field auto-populates when a placeholder&apos;s status has been changed to waived by the system.</description>
        <label>HasBeenWaived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required. This field auto-populates when a document has been imported to a loan from either a relationship record or a collateral record. This field can be used by downstream archiving processes to prevent duplication of archived records.</description>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Is_Staged__c</fullName>
        <description>This field is not required but is automatically populated. If true, the placeholder is in File Staging.</description>
        <formula>ISBLANK(LLC_BI__docType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__Legal_entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and associates the placeholder to a relationship (account) record. The default picklist values are the legal entities related to the object in context when viewed in the edit details modal of Document Manager.</description>
        <label>Legal Entity</label>
        <referenceTo>LLC_BI__Legal_Entities__c</referenceTo>
        <relationshipLabel>LLC_LoanDocument</relationshipLabel>
        <relationshipName>LLC_LoanDocument</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Placeholder Approval Roles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view and download a specific document, as well as copy its URL and view its version history. If left blank, all roles can view and download the document, as well as copy its URL and view its version history. This field works in tandem with the older Viewer Roles field, which is limited to fewer characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder Viewer Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Portal_Rejection_Comment__c</fullName>
        <label>Portal Rejection Comment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Portal_Rejection_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>The document you provided is missing a required signature. Please sign this document and upload again.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__Related_Generation_Context_Id__c</fullName>
        <description>Stores the id of the related object that informed the creation of the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Related Generation Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Trashed_Date__c</fullName>
        <description>This field is optional. This field stores the date and time a document was archived or trashed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Trashed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NDOC__description__c</fullName>
        <description>This field is optional. This field allows the user to provide a description of the placeholder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__fileName__c</fullName>
        <description>This field is not currently used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__isTrash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and auto-populates. When a document is trashed, this field is checked and the document appears in the trash/archive area of Document Manager.</description>
        <label>isTrash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDOC__neededByStage__c</fullName>
        <description>This field is optional. This field can be used to define the stage in the loan process by which a document is required.</description>
        <label>Needed By Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification / Application</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval / Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__year__c</fullName>
        <description>The administrator populates this optional text field to store the document year. By default it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>LLC_LoanDocument</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LLC_LoanDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LLC_LoanDocument</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CVR_Loan_Review_Status</fullName>
        <active>true</active>
        <description>Used to restrict users from approving the Loan Document whose Document Date is blank.</description>
        <errorConditionFormula>AND(
ISCHANGED(LLC_BI__reviewStatus__c),
ISBLANK(CF_Document_Date__c),

OR(
ISPICKVAL(PRIORVALUE(LLC_BI__reviewStatus__c), &apos;In-File&apos;),
ISPICKVAL(PRIORVALUE(LLC_BI__reviewStatus__c), &apos;Awaiting Review&apos;)),

OR(
ISPICKVAL(LLC_BI__reviewStatus__c, &apos;Reviewed&apos;),
ISPICKVAL(LLC_BI__reviewStatus__c, &apos;Approved&apos;)
))</errorConditionFormula>
        <errorMessage>Please ensure the Document Date field has been updated to change the status</errorMessage>
    </validationRules>
</CustomObject>